# integration

./: README.md  pelicanconf.py  publishconf.py  pyproject.toml
content/pages/: 404.md  integracia.md  komunikacia.md  o-integracii.md  o-nas.md  o-utecencoch.md  odborne-vzdelavanie.md  poznanie.md
content/pages/integracia/: byvanie.md  komunitne.md  kulturny-sok.md  socialne-veci.md  vzdelavanie-deti.md  zdravotna-starostlivost.md
content/pages/komunikacia/: komunikacia-odidenci.md  komunikacia-verejnost.md
content/templates/: accordion.html  button.html  description-list.html  fieldset.html  img_desc.html  tabbed-sections.html
output/: 404.html  archives.html  authors.html  categories.html  index.html  search-index.st  search.toml  tags.html
output/integracia/: index.html
output/integracia/byvanie/: index.html
output/integracia/komunitne-aktivity/: index.html
output/integracia/komunitne-aktiviy/: index.html
output/integracia/kulturny-sok/: index.html
output/integracia/socialne-veci/: index.html
output/integracia/vzdelavanie-deti/: index.html
output/integracia/zdravotna-starostlivost/: index.html
output/komunikacia/: index.html
output/komunikacia/komunikacia-odidenci/: index.html
output/komunikacia/komunikacia-odídenci/: index.html
output/komunikacia/komunikacia-verejnost/: index.html
output/o-integracii/: index.html
output/o-nas/: index.html
output/o-utecencoch/: index.html
output/odborne-vzdelavanie/: index.html
output/poznanie-situacie/: index.html
output/static/css/: integration.css
plugins/exampleplugin/: __init__.py
(+29 files in other folders)
