[tool.poetry]
name = "integration"
version = "0.1.0"
description = "A Pelican Website for CVEK"
authors = ["Marek Vician <marc.vician@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pelican = "^4.8.0"
Markdown = "^3.4.3"
pelican-jinja2content = "^1.0.1"
pelican-search = "^1.1.0"
pelican-sitemap = "^1.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
